# book-reviews-sentiment-analysis

./: .gitignore  LICENSE  README.md  app.py  model_inference.py  pyproject.toml  train_model.py
