[project]
name = "book-reviews-sentiment-analysis"
version = "0.1.0"
description = "System analizy sentymentu recenzji książek"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py", "README.md", "LICENSE"]

[tool.hatch.build.targets.sdist]
only-include = ["app.py", "README.md", "LICENSE", "pyproject.toml"]
