[project]
name = "book-reviews-sentiment-analysis"
version = "0.1.0"
description = "System analizy sentymentu recenzji książek"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "accelerate>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py", "README.md", "LICENSE"]

[tool.hatch.build.targets.sdist]
only-include = ["app.py", "README.md", "LICENSE", "pyproject.toml"]
